# citum-hub

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.citum  Dockerfile.hub-api  Dockerfile.hub-web  LICENSE  README.md  biome.json  docker-compose.yml  package.json
citum-core-main/: .beans.yml  .gitignore  .gitmodules  .release-plz.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  package-lock.json
citum-core-main/.beans/: csl26-06vm--migrate-apa.md  csl26-0amy--migrate-the-geological-society-of-london.md  csl26-0jud--migrate-annual-reviews-author-date.md  csl26-0s2b--fix-bibliography-separator-bug-for-author-suffix-c.md  csl26-1mkv--fix-duplicate-sort-keys-in-16-styles.md  csl26-1oq7--migrate-international-union-of-crystallography.md  csl26-1p1o--name-formatting-system.md  csl26-24pu--locale-specific-template-layouts-for-multilingual.md  csl26-25v6--integrate-template-sources-with-options-pipeline.md  csl26-29av--migrate-american-medical-association.md  csl26-29ti--phase-3-name-expansion-et-al-disambiguation.md  csl26-2tjp--add-sortpreset-to-citum-schema.md  csl26-2wk4--phase-1-wire-disambiguator-into-processor.md  csl26-380v--enhance-code-documentation.md  csl26-3gw7--migrate-modern-language-association.md  csl26-3kwr--conduct-comprehensive-code-review-for-magic.md  csl26-3skz--migrate-sage-harvard.md  csl26-4eyw--add-html-and-djot-output-modes.md  csl26-4h1a--migrate-the-geological-society-of-london.md  csl26-4hh4--migrate-sage-harvard.md  csl26-4i6n--style-elsevier-vancouver.md  csl26-4iae--migrate-springer-physics-author-date.md  csl26-4pwm--migrate-begell-house-chicago-author-date.md  csl26-4rg8--editor-label-capitalization-eds-vs-eds.md  csl26-4sh4--migrate-taylor-and-francis-chicago-author-date.md  csl26-504v--migrate-gost-r-7-0-5-2008-author-date.md  csl26-51ll--migrate-african-online-scientific-information-syst.md  csl26-58jg--migrate-american-society-for-microbiology.md  csl26-5axq--evaluate-icu-library-for-datetime-internationaliza.md  csl26-5l9j--create-style-authors-guide.md  csl26-5plq--implement-migration-variable-debugger.md  csl26-5qh6--restore-semantic-tagging-in-djothtml-output-modes.md  csl26-5t6s--note-citation-system.md  csl26-686p--migrate-nlm-citation-sequence-brackets-no-et-al.md  csl26-6bak--refactor-delimiter-handling-with-hybrid-enum-appro.md  csl26-6ijy--create-top-10-style-rendering-reporting.md  csl26-6n3c--support-name-formatting-without-periods-in-initial.md  csl26-6whe--fix-year-positioning-for-numeric-styles.md  csl26-6zof--migrate-elsevier-harvard.md  csl26-7jmo--migrate-begell-house-chicago-author-date.md  (+153 more)
citum-core-main/.claude/: settings.json
citum-core-main/.claude/agents/: dstyleplan.md  styleplan.md
citum-core-main/.claude/contexts/: docs-context.md  migration-context.md  processor-context.md  schema-context.md  testing-context.md
citum-core-main/.config/: nextest.toml
citum-core-main/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  style_request.md  technical_debt.md
citum-core-main/.github/workflows/: ci.yml  compat-report.yml  deploy_docs.yml  publish-schemas.yml  release-plz.yml
citum-core-main/baselines/: README.md
citum-core-main/docs/: CNAME  README.md  TIER_STATUS.md  examples.html  index.html  interactive-demo.html
citum-core-main/docs/reference/: SQI.md  (+4 more)
citum-core-main/examples/: bib-grouping-citations.yaml  bib-grouping-refs.yaml  chicago-bib.yaml  complex-citations.yaml  comprehensive.yaml  document-refs.json  document.djot  multilingual-citations.yaml  multilingual-refs.yaml
citum-core-main/locales/: de-DE.yaml  en-US.yaml  fr-FR.yaml  tr-TR.yaml
citum-core-main/scripts/: analyze-migration-gaps.js  apply-sort-presets.py  batch-infer.sh  batch-migrate-threshold.js  batch-oracle.js  bench-check.sh  bump-schema.sh  check-core-quality.js  check-coverage.js  check-docs-beans-hygiene.sh  check-oracle-regression.js  check-testing-infra.js  check-testing-infra.test.js  convert-locale.js  dedup-sort-keys.py  generate-test-item.js  getstyles.sh  infer-template.js  lint-rendering.sh  merge-migration.js  oracle-batch-aggregate.js  oracle-cache.js  oracle-e2e.js  oracle-migration.js  oracle-simple.js  oracle-utils.js  oracle-yaml.js  oracle.js  package.json  prep-migration.sh  report-core.js  resume-migration.sh  tasks-to-issues.sh  test-component-parser.js  test-server-http.sh  upgrade.js  upgrade2.js  validate-migration.js  validate-schema.sh  validate-schemas.js  (+1 more)
citum-core-main/styles/: README.md  african-online-scientific-information-systems-harvard.yaml  african-online-scientific-information-systems-vancouver.yaml  aims-press.yaml  alpha.yaml  american-association-for-cancer-research.yaml  american-chemical-society.yaml  american-fisheries-society.yaml  american-geophysical-union.yaml  american-institute-of-aeronautics-and-astronautics.yaml  american-institute-of-physics.yaml  american-marketing-association.yaml  american-mathematical-society-label.yaml  american-medical-association-alphabetical.yaml  american-medical-association-no-et-al.yaml  american-medical-association-no-url.yaml  american-medical-association.yaml  american-meteorological-society.yaml  american-physics-society.yaml  american-physiological-society.yaml  american-society-for-microbiology.yaml  american-society-of-civil-engineers.yaml  american-society-of-mechanical-engineers.yaml  american-sociological-association.yaml  american-statistical-association.yaml  annual-reviews-alphabetical.yaml  annual-reviews-author-date.yaml  annual-reviews.yaml  apa-7th.yaml  association-for-computing-machinery.yaml  baishideng-publishing-group.yaml  begell-house-chicago-author-date.yaml  biomed-central.yaml  bmj.yaml  bristol-university-press.yaml  canadian-journal-of-fisheries-and-aquatic-sciences.yaml  cell.yaml  chicago-author-date-classic.yaml  chicago-author-date.yaml  chicago-notes-bibliography-17th-edition.yaml  (+104 more)
server/: .env.example  Cargo.toml  payload.json
server/migrations/: 20260213000000_initial_schema.sql  20260213000001_bookmarks.sql
server/src/: auth.rs  main.rs  preview_data.rs
(+607 files in other folders)
