[package]
name = "style-editor-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
indexmap = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "json"] }
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
oauth2 = "4"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# Core CSL logic
citum_schema = { package = "citum-schema", git = "https://github.com/citum/citum-core", branch = "main" }
citum_engine = { package = "citum-engine", git = "https://github.com/citum/citum-core", branch = "main" }
intent_engine = { package = "intent-engine", path = "crates/intent-engine" }
serde_yaml = "0.9.34"
serde_yaml_ng = "0.10"
specta = { version = "1.0.5", features = ["serde", "typescript", "export"] }
