[package]
name = "citum-analyze"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"
description = "Analyze CSL 1.0 styles to guide migration development"

[[bin]]
name = "citum-analyze"
path = "src/main.rs"

[[bin]]
name = "citum-batch-test"
path = "src/batch_test.rs"

[dependencies]
csl_legacy = { package = "csl-legacy", path = "../csl-legacy" }
citum_schema = { package = "citum-schema", path = "../citum-schema" }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.4"
