[package]
name = "citum-edtf"
version.workspace = true
edition.workspace = true
description = "A modern EDTF (Extended Date/Time Format) parser built with winnow."
license = "MIT OR Apache-2.0"
repository = "https://github.com/citum/citum-core"

[dependencies]
winnow = "0.7"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
