[package]
name = "citum-schema"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_cbor = "0.11"
schemars = { version = "0.8", features = ["derive", "url"], optional = true }
citum_edtf = { package = "citum-edtf", path = "../citum-edtf", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
csl_legacy = { package = "csl-legacy", path = "../csl-legacy", optional = true }

[features]
default = []
legacy-convert = ["dep:csl_legacy"]
schema = ["dep:schemars"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "formats"
harness = false
