[package]
name = "style-editor-api"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
indexmap = "2"

# Core CSL logic
citum_schema = { package = "citum-schema", git = "https://github.com/citum/citum-core", branch = "main" }
citum_engine = { package = "citum-engine", git = "https://github.com/citum/citum-core", branch = "main" }
intent-engine = { path = "../intent-engine" }
serde_yaml = "0.9.34"
