[package]
name = "intent-engine"
version.workspace = true
edition.workspace = true
description = "Core logic for Citum Hub's style creation wizard and intent resolution."
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = { version = "1.0.5", features = ["serde", "typescript", "export"] }
citum_schema = { package = "citum-schema", git = "https://github.com/citum/citum-core", branch = "main" }
serde_yaml = "0.9.34"
