[package]
name = "wasm-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
citum-schema = { git = "https://github.com/citum/citum-core", branch = "main", features = ["legacy-convert"] }
citum-engine = { git = "https://github.com/citum/citum-core", branch = "main" }
citum-bindings = { git = "https://github.com/citum/citum-core", branch = "main", features = ["wasm", "legacy-convert"] }
csl-legacy = { git = "https://github.com/citum/citum-core", branch = "main" }
intent-engine = { path = "../intent-engine" }
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
